[project]
name = "pvl-webtools"
version = "0.1.0"
description = "Web search (SearXNG) and fetch tools with MCP server"
readme = "README.md"
license = {text = "MIT"}
authors = [{name = "pvliesdonk"}]
requires-python = ">=3.10"
keywords = ["websearch", "webfetch", "searxng", "metasearch", "mcp", "trafilatura"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "httpx>=0.27",
]

[project.optional-dependencies]
mcp = [
    "fastmcp>=2.0",
]
extraction = [
    "trafilatura>=1.6",
]
all = [
    "fastmcp>=2.0",
    "trafilatura>=1.6",
]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "pytest-cov>=4.0",
    "ruff>=0.1",
    "mypy>=1.0",
    "fastmcp>=2.0",
]

[project.scripts]
pvl-webtools-mcp = "pvlwebtools.mcp_server:mcp.run"

[project.urls]
Repository = "https://github.com/pvliesdonk/pvl-webtools"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/pvlwebtools"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "C4", "SIM"]

[tool.mypy]
python_version = "3.10"
strict = true
warn_return_any = true
warn_unused_ignores = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"
asyncio_mode = "auto"
